RESOLVED FIXED45246
REGRESSION(66741): Undefined pthread macros
https://bugs.webkit.org/show_bug.cgi?id=45246
Summary REGRESSION(66741): Undefined pthread macros
Csaba Osztrogonác
Reported 2010-09-05 15:05:21 PDT
warning on Qt Linux Release bot: ../../../JavaScriptCore/wtf/FastMalloc.cpp:1496:5: warning: "PTHREAD_MUTEX_NORMAL" is not defined ../../../JavaScriptCore/wtf/FastMalloc.cpp:1496:29: warning: "PTHREAD_MUTEX_DEFAULT" is not defined
Attachments
proposed patch (1.24 KB, patch)
2010-09-07 00:26 PDT, Zoltan Horvath
no flags
Alexey Proskuryakov
Comment 1 2010-09-05 17:29:13 PDT
Is Qt even using FastMalloc? FWIW, we've been already using these macros in ThreadingPthreads.cpp.
Csaba Osztrogonác
Comment 2 2010-09-06 04:01:35 PDT
I cc-ed our memory expert. Zoltan, could you check it, please?
Zoltan Horvath
Comment 3 2010-09-06 05:53:37 PDT
(In reply to comment #1) > Is Qt even using FastMalloc? Yes, it is. > FWIW, we've been already using these macros in ThreadingPthreads.cpp. QtWebKit doesn't set PTHREADS macro, so we don't compile ThreadingPthreads.cpp. Why do we need this #if PTHREAD_MUTEX_NORMAL == PTHREAD_MUTEX_DEFAULT condition? As I see these are defined as the same on mac and on linux as well (if it is even defined).
Darin Adler
Comment 4 2010-09-06 08:47:27 PDT
(In reply to comment #3) > Why do we need this > > #if PTHREAD_MUTEX_NORMAL == PTHREAD_MUTEX_DEFAULT > > condition? See bug 39893 for the reason.
Zoltan Horvath
Comment 5 2010-09-07 00:26:18 PDT
Created attachment 66687 [details] proposed patch Proposed patch for now. It's making the build happy.
WebKit Commit Bot
Comment 6 2010-09-07 08:16:40 PDT
Comment on attachment 66687 [details] proposed patch Clearing flags on attachment: 66687 Committed r66883: <http://trac.webkit.org/changeset/66883>
WebKit Commit Bot
Comment 7 2010-09-07 08:16:45 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8 2010-09-07 10:26:34 PDT
http://trac.webkit.org/changeset/66883 might have broken Leopard Intel Debug (Tests)
Csaba Osztrogonác
Comment 9 2010-09-07 10:46:07 PDT
(In reply to comment #8) > http://trac.webkit.org/changeset/66883 might have broken Leopard Intel Debug (Tests) false positive alarm, it was a flakey test
Note You need to log in before you can comment on or make changes to this bug.