2010-09-07  Zoltan Horvath  <zoltan@webkit.org>

Reviewed by Darin Adler.

        REGRESSION(66741): Undefined pthread macros
        https://bugs.webkit.org/show_bug.cgi?id=45246

        PTHREAD_MUTEX_NORMAL and PTHREAD_MUTEX_DEFAULT (introduced in r60487) are not defined on Linux,
        but used in a statement. Add an additional check to test this.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::initializeScavenger):

Canonical link: https://commits.webkit.org/57641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66883 268f45cc-cd09-0410-ab3c-d52691b4dbfc